# glwrapper-2024

./: .gitignore  CMakeLists.txt  CMakePresets.json  canvas.frag.glsl  canvas.vert.glsl  flake.nix  imgui.ini
.cache/clangd/index/: glad.c.376C0552534AFA31.idx  glad.h.05AE2852E7B96F7C.idx  khrplatform.h.A61B7A66A9C1D56E.idx  main.cpp.8532B4348553156C.idx
libs/glad/include/glad/: glad.h
libs/glad/src/: glad.c
src/: main.cpp
